WebKit2 shouldn't try to send an empty user agent https://bugs.webkit.org/show_bug.cgi?id=48397

Reviewed by Adam Roben.

WebKit2:

Change the check of the custom user agent to an empty check instead of a null check. When the client application
sets a custom user agent and then resets it, the custom user agent is set to an empty string. If all we do
is check for a null string, then we will think we have a custom user agent (which is empty) and send an empty
user agent.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::userAgent):

WebKitTools:

Add a test that when we set our custom user agent to an empty string, we don't send
an empty user agent.

* TestWebKitAPI/Tests/WebKit2/PreventEmptyUserAgent.cpp: Added.
(TestWebKitAPI::didRunJavaScript): Make sure that the result of navigator.userAgent isn't empty.
(TestWebKitAPI::TEST): Set our custom user agent to the empty string, and run navigator.userAgent.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Add the new file.
* TestWebKitAPI/win/TestWebKitAPI.vcproj: Ditto.



Canonical link: https://commits.webkit.org/61179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70658 268f45cc-cd09-0410-ab3c-d52691b4dbfc